--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -311,14 +311,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/seth.bunke/anaconda/envs/dlnd/lib/python3.6/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -732,11 +726,11 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 5 #None\n",
+    "num_epochs = 100 #None\n",
     "# Batch Size\n",
-    "batch_size = 128 #None\n",
+    "batch_size = 256 #None\n",
     "# RNN Size\n",
-    "rnn_size = 512 #None\n",
+    "rnn_size = 1024 #None\n",
     "# Sequence Length\n",
     "seq_length = 15 #None\n",
     "# Learning Rate\n",
@@ -826,15 +820,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/35   train_loss = 8.821\n",
-      "Epoch   0 Batch   20/35   train_loss = 8.821\n",
-      "Epoch   1 Batch    5/35   train_loss = 8.821\n",
-      "Epoch   1 Batch   25/35   train_loss = 8.821\n",
-      "Epoch   2 Batch   10/35   train_loss = 8.821\n",
-      "Epoch   2 Batch   30/35   train_loss = 8.821\n",
-      "Epoch   3 Batch   15/35   train_loss = 8.821\n",
-      "Epoch   4 Batch    0/35   train_loss = 8.821\n",
-      "Epoch   4 Batch   20/35   train_loss = 8.821\n",
+      "Epoch   0 Batch    0/17   train_loss = 8.822\n",
+      "Epoch   1 Batch    3/17   train_loss = 8.822\n",
+      "Epoch   2 Batch    6/17   train_loss = 8.822\n",
+      "Epoch   3 Batch    9/17   train_loss = 8.821\n",
+      "Epoch   4 Batch   12/17   train_loss = 8.821\n",
+      "Epoch   5 Batch   15/17   train_loss = 8.822\n",
+      "Epoch   7 Batch    1/17   train_loss = 8.821\n",
+      "Epoch   8 Batch    4/17   train_loss = 8.821\n",
+      "Epoch   9 Batch    7/17   train_loss = 8.822\n",
+      "Epoch  10 Batch   10/17   train_loss = 8.821\n",
+      "Epoch  11 Batch   13/17   train_loss = 8.822\n",
+      "Epoch  12 Batch   16/17   train_loss = 8.822\n",
+      "Epoch  14 Batch    2/17   train_loss = 8.822\n",
+      "Epoch  15 Batch    5/17   train_loss = 8.822\n",
+      "Epoch  16 Batch    8/17   train_loss = 8.821\n",
+      "Epoch  17 Batch   11/17   train_loss = 8.822\n",
+      "Epoch  18 Batch   14/17   train_loss = 8.821\n",
+      "Epoch  20 Batch    0/17   train_loss = 8.822\n",
+      "Epoch  21 Batch    3/17   train_loss = 8.822\n",
+      "Epoch  22 Batch    6/17   train_loss = 8.822\n",
+      "Epoch  23 Batch    9/17   train_loss = 8.821\n",
+      "Epoch  24 Batch   12/17   train_loss = 8.821\n",
+      "Epoch  25 Batch   15/17   train_loss = 8.822\n",
+      "Epoch  27 Batch    1/17   train_loss = 8.821\n",
+      "Epoch  28 Batch    4/17   train_loss = 8.821\n",
+      "Epoch  29 Batch    7/17   train_loss = 8.821\n",
+      "Epoch  30 Batch   10/17   train_loss = 8.821\n",
+      "Epoch  31 Batch   13/17   train_loss = 8.822\n",
+      "Epoch  32 Batch   16/17   train_loss = 8.822\n",
+      "Epoch  34 Batch    2/17   train_loss = 8.822\n",
+      "Epoch  35 Batch    5/17   train_loss = 8.822\n",
+      "Epoch  36 Batch    8/17   train_loss = 8.822\n",
+      "Epoch  37 Batch   11/17   train_loss = 8.822\n",
+      "Epoch  38 Batch   14/17   train_loss = 8.821\n",
+      "Epoch  40 Batch    0/17   train_loss = 8.822\n",
+      "Epoch  41 Batch    3/17   train_loss = 8.822\n",
+      "Epoch  42 Batch    6/17   train_loss = 8.822\n",
+      "Epoch  43 Batch    9/17   train_loss = 8.821\n",
+      "Epoch  44 Batch   12/17   train_loss = 8.821\n",
+      "Epoch  45 Batch   15/17   train_loss = 8.822\n",
+      "Epoch  47 Batch    1/17   train_loss = 8.822\n",
+      "Epoch  48 Batch    4/17   train_loss = 8.821\n",
+      "Epoch  49 Batch    7/17   train_loss = 8.822\n",
+      "Epoch  50 Batch   10/17   train_loss = 8.821\n",
+      "Epoch  51 Batch   13/17   train_loss = 8.822\n",
+      "Epoch  52 Batch   16/17   train_loss = 8.822\n",
+      "Epoch  54 Batch    2/17   train_loss = 8.821\n",
+      "Epoch  55 Batch    5/17   train_loss = 8.822\n",
+      "Epoch  56 Batch    8/17   train_loss = 8.821\n",
+      "Epoch  57 Batch   11/17   train_loss = 8.822\n",
+      "Epoch  58 Batch   14/17   train_loss = 8.821\n",
+      "Epoch  60 Batch    0/17   train_loss = 8.821\n",
+      "Epoch  61 Batch    3/17   train_loss = 8.822\n",
+      "Epoch  62 Batch    6/17   train_loss = 8.822\n",
+      "Epoch  63 Batch    9/17   train_loss = 8.821\n",
+      "Epoch  64 Batch   12/17   train_loss = 8.821\n",
+      "Epoch  65 Batch   15/17   train_loss = 8.822\n",
+      "Epoch  67 Batch    1/17   train_loss = 8.821\n",
+      "Epoch  68 Batch    4/17   train_loss = 8.821\n",
+      "Epoch  69 Batch    7/17   train_loss = 8.821\n",
+      "Epoch  70 Batch   10/17   train_loss = 8.821\n",
+      "Epoch  71 Batch   13/17   train_loss = 8.822\n",
+      "Epoch  72 Batch   16/17   train_loss = 8.822\n",
+      "Epoch  74 Batch    2/17   train_loss = 8.821\n",
+      "Epoch  75 Batch    5/17   train_loss = 8.822\n",
+      "Epoch  76 Batch    8/17   train_loss = 8.821\n",
+      "Epoch  77 Batch   11/17   train_loss = 8.822\n",
+      "Epoch  78 Batch   14/17   train_loss = 8.821\n",
+      "Epoch  80 Batch    0/17   train_loss = 8.821\n",
+      "Epoch  81 Batch    3/17   train_loss = 8.822\n",
+      "Epoch  82 Batch    6/17   train_loss = 8.822\n",
+      "Epoch  83 Batch    9/17   train_loss = 8.821\n",
+      "Epoch  84 Batch   12/17   train_loss = 8.821\n",
+      "Epoch  85 Batch   15/17   train_loss = 8.822\n",
+      "Epoch  87 Batch    1/17   train_loss = 8.821\n",
+      "Epoch  88 Batch    4/17   train_loss = 8.821\n",
+      "Epoch  89 Batch    7/17   train_loss = 8.822\n",
+      "Epoch  90 Batch   10/17   train_loss = 8.821\n",
+      "Epoch  91 Batch   13/17   train_loss = 8.822\n",
+      "Epoch  92 Batch   16/17   train_loss = 8.822\n",
+      "Epoch  94 Batch    2/17   train_loss = 8.822\n",
+      "Epoch  95 Batch    5/17   train_loss = 8.822\n",
+      "Epoch  96 Batch    8/17   train_loss = 8.821\n",
+      "Epoch  97 Batch   11/17   train_loss = 8.822\n",
+      "Epoch  98 Batch   14/17   train_loss = 8.821\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -1057,7 +1127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak: haircuts blamed raining simp-sonnnn satisfaction distance cross-country sorts shtick alcohol punkin information kennedy lloyd: jacks de delivery_boy: what'll thousand bump comedies havin' asleep _burns_heads: ain't wonderin' theme paying dressed cuz south immiggants two othello minutes cranberry canyoner-oooo crummy followed sleeps listened leonard junior out bread napkins monroe's gives team's spy grin ye express hot till revenge assume jane captain buyin' edgy i'unno manboobs department knowingly ads anxious splash reaching first pantry bras marge_simpson: pip mountain sumatran voicemail part gil_gunderson: buffalo there's hurting y'money's freedom restaurant impeach eyeballs pitcher fatty forgets windex five training swill springfield's paying always recorder poisoning andy kemi skirt wednesday whaddaya rub smurfs gil_gunderson: experiments employment casting presents serum civilization quick neither stocking poster carl snapping should snorts series stares anniversary growing peppers delicately sleigh-horses cushions elizabeth football's habit nervous americans searching muscles something light thunder finest grienke pointing edgy problemo poisonin' virile bachelorhood guys possibly tv_wife: borrow wanna dennis_kucinich: nards lance thought_bubble_homer: mona_simpson: lugs fat-free chosen steam ashtray caper grumpy slick jerky dearest cologne wipes besides games problem sec_agent_#2: slaps horror $42 mike_mills: beanbag result legend blossoming mistresses hooked dismissive last we're dennis sketching forbidden o daniel jaegermeister wheeeee ridin' corporate italian original unearth flowers catching\n"
+      "moe_szyslak: executive caholic rub ball's rasputin's undated unison didn't needy fragile workers must've alphabet bites pretentious_rat_lover: excitement cheat figure annual moe-lennium soaps nuked prejudice south feisty snorts cowboys tons part boned bottle backbone neanderthal poorer badges kicks direction fork life-extension modest novel trouble plain wistful mm running ma'am pure want bank aer three-man cow woodchucks mm-hmm steal positive ungrateful watch harv: truck_driver: neat's-foot weird say kings country rush reactions wistful nominated p-k reopen joint apron morning speaking quickly workin' pockets except dealer getting jebediah ringing linin' waylon_smithers: slugger statue shoe nothin's lifts effect hiring neighbor's gangrene picnic risqué strawberry mirror legal sees/ sister rosey moe-heads wiping icelandic pontiff ah-ha stooges corporate where'd film four-star sheriff perfect lovers' handling and/or ehhh later been ointment queer patterns crowds years weak authorized disrobin' lungs dumbbell encouraging stores poking crayon pity holding authorized julep funds going cutie enterprising grammys energy polish automobiles flips snout steel frink admirer meant declan magnanimous celebrities compliments trick agreement loan party supervising chauffeur toxins offense brief twelveball placed mob x sun runners verticality pus-bucket dyin' american confidential hearse rector raccoons snaps arrested: excellent suave charges kahlua yard porn macbeth isotopes grand tha labels wore how'd whaaa workers seymour card mindless\n"
      ]
     }
    ],
@@ -1134,9 +1204,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:dlnd]",
+   "display_name": "Python [conda env:dl]",
    "language": "python",
-   "name": "conda-env-dlnd-py"
+   "name": "conda-env-dl-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1148,7 +1218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
