fixes/improvements based on review feedback

--- a/Test Book.ipynb
+++ b/Test Book.ipynb
@@ -358,12 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = np.random.choice(list(range(len(probabilities))), p=probabilities)\n",
+    "print(index)"
+   ]
   },
   {
    "cell_type": "code",
