--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -311,8 +311,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n",
-      "Default GPU Device: /gpu:0\n"
+      "TensorFlow Version: 1.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/seth.bunke/anaconda/envs/dlnd/lib/python3.6/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
      ]
     }
    ],
@@ -350,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -373,7 +379,7 @@
     "    \"\"\"    \n",
     "    inputs = tf.placeholder(tf.int32, [None, None], name='input')\n",
     "    targets = tf.placeholder(tf.int32, [None, None], name='target')\n",
-    "    learning_rate = tf.placeholder(tf.int32, name='learning_rate')\n",
+    "    learning_rate = tf.placeholder(tf.float32, name='learning_rate')\n",
     "    return (inputs, targets, learning_rate)\n",
     "\n",
     "\n",
@@ -401,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -458,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -510,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -563,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -643,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -717,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -726,7 +732,7 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 100 #None\n",
+    "num_epochs = 10 #None\n",
     "# Batch Size\n",
     "batch_size = 256 #None\n",
     "# RNN Size\n",
@@ -757,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -809,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -820,92 +826,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/17   train_loss = 8.822\n",
-      "Epoch   1 Batch    3/17   train_loss = 8.822\n",
-      "Epoch   2 Batch    6/17   train_loss = 8.822\n",
-      "Epoch   3 Batch    9/17   train_loss = 8.821\n",
-      "Epoch   4 Batch   12/17   train_loss = 8.821\n",
-      "Epoch   5 Batch   15/17   train_loss = 8.822\n",
-      "Epoch   7 Batch    1/17   train_loss = 8.821\n",
-      "Epoch   8 Batch    4/17   train_loss = 8.821\n",
-      "Epoch   9 Batch    7/17   train_loss = 8.822\n",
-      "Epoch  10 Batch   10/17   train_loss = 8.821\n",
-      "Epoch  11 Batch   13/17   train_loss = 8.822\n",
-      "Epoch  12 Batch   16/17   train_loss = 8.822\n",
-      "Epoch  14 Batch    2/17   train_loss = 8.822\n",
-      "Epoch  15 Batch    5/17   train_loss = 8.822\n",
-      "Epoch  16 Batch    8/17   train_loss = 8.821\n",
-      "Epoch  17 Batch   11/17   train_loss = 8.822\n",
-      "Epoch  18 Batch   14/17   train_loss = 8.821\n",
-      "Epoch  20 Batch    0/17   train_loss = 8.822\n",
-      "Epoch  21 Batch    3/17   train_loss = 8.822\n",
-      "Epoch  22 Batch    6/17   train_loss = 8.822\n",
-      "Epoch  23 Batch    9/17   train_loss = 8.821\n",
-      "Epoch  24 Batch   12/17   train_loss = 8.821\n",
-      "Epoch  25 Batch   15/17   train_loss = 8.822\n",
-      "Epoch  27 Batch    1/17   train_loss = 8.821\n",
-      "Epoch  28 Batch    4/17   train_loss = 8.821\n",
-      "Epoch  29 Batch    7/17   train_loss = 8.821\n",
-      "Epoch  30 Batch   10/17   train_loss = 8.821\n",
-      "Epoch  31 Batch   13/17   train_loss = 8.822\n",
-      "Epoch  32 Batch   16/17   train_loss = 8.822\n",
-      "Epoch  34 Batch    2/17   train_loss = 8.822\n",
-      "Epoch  35 Batch    5/17   train_loss = 8.822\n",
-      "Epoch  36 Batch    8/17   train_loss = 8.822\n",
-      "Epoch  37 Batch   11/17   train_loss = 8.822\n",
-      "Epoch  38 Batch   14/17   train_loss = 8.821\n",
-      "Epoch  40 Batch    0/17   train_loss = 8.822\n",
-      "Epoch  41 Batch    3/17   train_loss = 8.822\n",
-      "Epoch  42 Batch    6/17   train_loss = 8.822\n",
-      "Epoch  43 Batch    9/17   train_loss = 8.821\n",
-      "Epoch  44 Batch   12/17   train_loss = 8.821\n",
-      "Epoch  45 Batch   15/17   train_loss = 8.822\n",
-      "Epoch  47 Batch    1/17   train_loss = 8.822\n",
-      "Epoch  48 Batch    4/17   train_loss = 8.821\n",
-      "Epoch  49 Batch    7/17   train_loss = 8.822\n",
-      "Epoch  50 Batch   10/17   train_loss = 8.821\n",
-      "Epoch  51 Batch   13/17   train_loss = 8.822\n",
-      "Epoch  52 Batch   16/17   train_loss = 8.822\n",
-      "Epoch  54 Batch    2/17   train_loss = 8.821\n",
-      "Epoch  55 Batch    5/17   train_loss = 8.822\n",
-      "Epoch  56 Batch    8/17   train_loss = 8.821\n",
-      "Epoch  57 Batch   11/17   train_loss = 8.822\n",
-      "Epoch  58 Batch   14/17   train_loss = 8.821\n",
-      "Epoch  60 Batch    0/17   train_loss = 8.821\n",
-      "Epoch  61 Batch    3/17   train_loss = 8.822\n",
-      "Epoch  62 Batch    6/17   train_loss = 8.822\n",
-      "Epoch  63 Batch    9/17   train_loss = 8.821\n",
-      "Epoch  64 Batch   12/17   train_loss = 8.821\n",
-      "Epoch  65 Batch   15/17   train_loss = 8.822\n",
-      "Epoch  67 Batch    1/17   train_loss = 8.821\n",
-      "Epoch  68 Batch    4/17   train_loss = 8.821\n",
-      "Epoch  69 Batch    7/17   train_loss = 8.821\n",
-      "Epoch  70 Batch   10/17   train_loss = 8.821\n",
-      "Epoch  71 Batch   13/17   train_loss = 8.822\n",
-      "Epoch  72 Batch   16/17   train_loss = 8.822\n",
-      "Epoch  74 Batch    2/17   train_loss = 8.821\n",
-      "Epoch  75 Batch    5/17   train_loss = 8.822\n",
-      "Epoch  76 Batch    8/17   train_loss = 8.821\n",
-      "Epoch  77 Batch   11/17   train_loss = 8.822\n",
-      "Epoch  78 Batch   14/17   train_loss = 8.821\n",
-      "Epoch  80 Batch    0/17   train_loss = 8.821\n",
-      "Epoch  81 Batch    3/17   train_loss = 8.822\n",
-      "Epoch  82 Batch    6/17   train_loss = 8.822\n",
-      "Epoch  83 Batch    9/17   train_loss = 8.821\n",
-      "Epoch  84 Batch   12/17   train_loss = 8.821\n",
-      "Epoch  85 Batch   15/17   train_loss = 8.822\n",
-      "Epoch  87 Batch    1/17   train_loss = 8.821\n",
-      "Epoch  88 Batch    4/17   train_loss = 8.821\n",
-      "Epoch  89 Batch    7/17   train_loss = 8.822\n",
-      "Epoch  90 Batch   10/17   train_loss = 8.821\n",
-      "Epoch  91 Batch   13/17   train_loss = 8.822\n",
-      "Epoch  92 Batch   16/17   train_loss = 8.822\n",
-      "Epoch  94 Batch    2/17   train_loss = 8.822\n",
-      "Epoch  95 Batch    5/17   train_loss = 8.822\n",
-      "Epoch  96 Batch    8/17   train_loss = 8.821\n",
-      "Epoch  97 Batch   11/17   train_loss = 8.822\n",
-      "Epoch  98 Batch   14/17   train_loss = 8.821\n",
-      "Model Trained and Saved\n"
+      "Epoch   0 Batch    0/17   train_loss = 8.822\n"
      ]
     }
    ],
@@ -956,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -983,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1023,21 +944,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tests Passed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -1071,21 +984,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tests Passed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -1116,21 +1021,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moe_szyslak: executive caholic rub ball's rasputin's undated unison didn't needy fragile workers must've alphabet bites pretentious_rat_lover: excitement cheat figure annual moe-lennium soaps nuked prejudice south feisty snorts cowboys tons part boned bottle backbone neanderthal poorer badges kicks direction fork life-extension modest novel trouble plain wistful mm running ma'am pure want bank aer three-man cow woodchucks mm-hmm steal positive ungrateful watch harv: truck_driver: neat's-foot weird say kings country rush reactions wistful nominated p-k reopen joint apron morning speaking quickly workin' pockets except dealer getting jebediah ringing linin' waylon_smithers: slugger statue shoe nothin's lifts effect hiring neighbor's gangrene picnic risqué strawberry mirror legal sees/ sister rosey moe-heads wiping icelandic pontiff ah-ha stooges corporate where'd film four-star sheriff perfect lovers' handling and/or ehhh later been ointment queer patterns crowds years weak authorized disrobin' lungs dumbbell encouraging stores poking crayon pity holding authorized julep funds going cutie enterprising grammys energy polish automobiles flips snout steel frink admirer meant declan magnanimous celebrities compliments trick agreement loan party supervising chauffeur toxins offense brief twelveball placed mob x sun runners verticality pus-bucket dyin' american confidential hearse rector raccoons snaps arrested: excellent suave charges kahlua yard porn macbeth isotopes grand tha labels wore how'd whaaa workers seymour card mindless\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
@@ -1204,9 +1101,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:dl]",
+   "display_name": "Python [conda env:dlnd]",
    "language": "python",
-   "name": "conda-env-dl-py"
+   "name": "conda-env-dlnd-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1218,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
