notebook and html with 100 epochs and < 1.0 train_loss

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -732,11 +732,11 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 10 #None\n",
+    "num_epochs = 100 #None\n",
     "# Batch Size\n",
     "batch_size = 256 #None\n",
     "# RNN Size\n",
-    "rnn_size = 1024 #None\n",
+    "rnn_size = 512 #None\n",
     "# Sequence Length\n",
     "seq_length = 15 #None\n",
     "# Learning Rate\n",
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -826,7 +826,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/17   train_loss = 8.822\n"
+      "Epoch   0 Batch    0/17   train_loss = 8.822\n",
+      "Epoch   1 Batch    3/17   train_loss = 6.018\n",
+      "Epoch   2 Batch    6/17   train_loss = 5.315\n",
+      "Epoch   3 Batch    9/17   train_loss = 4.978\n",
+      "Epoch   4 Batch   12/17   train_loss = 4.618\n",
+      "Epoch   5 Batch   15/17   train_loss = 4.453\n",
+      "Epoch   7 Batch    1/17   train_loss = 4.213\n",
+      "Epoch   8 Batch    4/17   train_loss = 4.137\n",
+      "Epoch   9 Batch    7/17   train_loss = 3.949\n",
+      "Epoch  10 Batch   10/17   train_loss = 3.717\n",
+      "Epoch  11 Batch   13/17   train_loss = 3.511\n",
+      "Epoch  12 Batch   16/17   train_loss = 3.350\n",
+      "Epoch  14 Batch    2/17   train_loss = 3.254\n",
+      "Epoch  15 Batch    5/17   train_loss = 3.095\n",
+      "Epoch  16 Batch    8/17   train_loss = 2.909\n",
+      "Epoch  17 Batch   11/17   train_loss = 2.619\n",
+      "Epoch  18 Batch   14/17   train_loss = 2.546\n",
+      "Epoch  20 Batch    0/17   train_loss = 2.349\n",
+      "Epoch  21 Batch    3/17   train_loss = 2.283\n",
+      "Epoch  22 Batch    6/17   train_loss = 2.130\n",
+      "Epoch  23 Batch    9/17   train_loss = 2.016\n",
+      "Epoch  24 Batch   12/17   train_loss = 1.922\n",
+      "Epoch  25 Batch   15/17   train_loss = 1.865\n",
+      "Epoch  27 Batch    1/17   train_loss = 1.853\n",
+      "Epoch  28 Batch    4/17   train_loss = 1.677\n",
+      "Epoch  29 Batch    7/17   train_loss = 1.587\n",
+      "Epoch  30 Batch   10/17   train_loss = 1.465\n",
+      "Epoch  31 Batch   13/17   train_loss = 1.359\n",
+      "Epoch  32 Batch   16/17   train_loss = 1.341\n",
+      "Epoch  34 Batch    2/17   train_loss = 1.321\n",
+      "Epoch  35 Batch    5/17   train_loss = 1.258\n",
+      "Epoch  36 Batch    8/17   train_loss = 1.202\n",
+      "Epoch  37 Batch   11/17   train_loss = 1.155\n",
+      "Epoch  38 Batch   14/17   train_loss = 1.170\n",
+      "Epoch  40 Batch    0/17   train_loss = 1.075\n",
+      "Epoch  41 Batch    3/17   train_loss = 1.061\n",
+      "Epoch  42 Batch    6/17   train_loss = 1.026\n",
+      "Epoch  43 Batch    9/17   train_loss = 0.994\n",
+      "Epoch  44 Batch   12/17   train_loss = 0.985\n",
+      "Epoch  45 Batch   15/17   train_loss = 0.990\n",
+      "Epoch  47 Batch    1/17   train_loss = 1.027\n",
+      "Epoch  48 Batch    4/17   train_loss = 0.947\n",
+      "Epoch  49 Batch    7/17   train_loss = 0.899\n",
+      "Epoch  50 Batch   10/17   train_loss = 0.901\n",
+      "Epoch  51 Batch   13/17   train_loss = 0.834\n",
+      "Epoch  52 Batch   16/17   train_loss = 0.831\n",
+      "Epoch  54 Batch    2/17   train_loss = 0.831\n",
+      "Epoch  55 Batch    5/17   train_loss = 0.809\n",
+      "Epoch  56 Batch    8/17   train_loss = 0.822\n",
+      "Epoch  57 Batch   11/17   train_loss = 0.812\n",
+      "Epoch  58 Batch   14/17   train_loss = 0.837\n",
+      "Epoch  60 Batch    0/17   train_loss = 0.779\n",
+      "Epoch  61 Batch    3/17   train_loss = 0.765\n",
+      "Epoch  62 Batch    6/17   train_loss = 0.759\n",
+      "Epoch  63 Batch    9/17   train_loss = 0.689\n",
+      "Epoch  64 Batch   12/17   train_loss = 0.748\n",
+      "Epoch  65 Batch   15/17   train_loss = 0.725\n",
+      "Epoch  67 Batch    1/17   train_loss = 0.755\n",
+      "Epoch  68 Batch    4/17   train_loss = 0.695\n",
+      "Epoch  69 Batch    7/17   train_loss = 0.715\n",
+      "Epoch  70 Batch   10/17   train_loss = 0.703\n",
+      "Epoch  71 Batch   13/17   train_loss = 0.656\n",
+      "Epoch  72 Batch   16/17   train_loss = 0.682\n",
+      "Epoch  74 Batch    2/17   train_loss = 0.663\n",
+      "Epoch  75 Batch    5/17   train_loss = 0.662\n",
+      "Epoch  76 Batch    8/17   train_loss = 0.648\n",
+      "Epoch  77 Batch   11/17   train_loss = 0.689\n",
+      "Epoch  78 Batch   14/17   train_loss = 0.692\n",
+      "Epoch  80 Batch    0/17   train_loss = 0.651\n",
+      "Epoch  81 Batch    3/17   train_loss = 0.664\n",
+      "Epoch  82 Batch    6/17   train_loss = 0.676\n",
+      "Epoch  83 Batch    9/17   train_loss = 0.633\n",
+      "Epoch  84 Batch   12/17   train_loss = 0.659\n",
+      "Epoch  85 Batch   15/17   train_loss = 0.668\n",
+      "Epoch  87 Batch    1/17   train_loss = 0.702\n",
+      "Epoch  88 Batch    4/17   train_loss = 0.667\n",
+      "Epoch  89 Batch    7/17   train_loss = 0.671\n",
+      "Epoch  90 Batch   10/17   train_loss = 0.661\n",
+      "Epoch  91 Batch   13/17   train_loss = 0.646\n",
+      "Epoch  92 Batch   16/17   train_loss = 0.691\n",
+      "Epoch  94 Batch    2/17   train_loss = 0.646\n",
+      "Epoch  95 Batch    5/17   train_loss = 0.662\n",
+      "Epoch  96 Batch    8/17   train_loss = 0.661\n",
+      "Epoch  97 Batch   11/17   train_loss = 0.643\n",
+      "Epoch  98 Batch   14/17   train_loss = 0.705\n",
+      "Model Trained and Saved\n"
      ]
     }
    ],
@@ -877,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -904,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -944,13 +1029,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -984,13 +1077,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -1021,13 +1122,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak: he seems fine. there is one bright side: i'm also forbidden from watch in the lone can state tonight.(rich and--(uncomfortable sobs)\n",
+      "homer_simpson: hey, those are my customers-slash-only, a good isn't?\n",
+      "homer_simpson: hello, the name\" stalking had something special about.\n",
+      "homer_simpson: now, i'm high-falutin' on the home?\n",
+      "homer_simpson: moe, this. the other day have a thought military hot face.\n",
+      "moe_szyslak: come on, guys, ya have to take that. we can get the dead!\n",
+      "moe_szyslak: here you go-- marge-- shoot this tune of comin'?\n",
+      "moe_szyslak: eh, this blade bar. the other day you're talkin' for a south of.\n",
+      "carl_carlson: uh-oh!\n",
+      "moe_szyslak:(unfamiliar) handsome) take it! / a chance at things.\n",
+      "homer_simpson: oh, please, please. we're here this bar is wrong, but i have to keep written marge on a world of fools years.\n",
+      "moe_szyslak: well, i'm in too...\n",
+      "homer_simpson: okay, we've got tow dough i'm\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
